opam-version: "1.2"
maintainer: "Travis Brady <travis.brady@gmail.com>"
authors: ["Travis Brady <travis.brady@gmail.com>"]
homepage: "https://github.com/travisbrady/ocaml-h3"
dev-repo: "https://github.com/travisbrady/ocaml-h3"
bug-reports: "https://github.com/travisbrady/ocaml-h3/issues"
tags: [ "computer" ]
license: "Apache-2.0"
version: "dev"
build: [["jbuilder" "build" "--only-packages" "h3" "--root" "." "-j" jobs "@install"]]
install: []
remove:  []

depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
  "ppx_inline_test" {>= "0.11.0"}
]

depopts: [
]

conflicts: [
]

available: [ ocaml-version >= "4.05" ]
